# download

./: .env.schema  .gitignore  Dockerfile  README.md  internal_requirements.txt  pyproject.toml  requirements.txt  run.py
app/: api_registry.py  config.py  main.py
app/commons/: download_manager.py  locks.py
app/commons/service_connection/: minio_client.py
app/models/: models_data_download.py
app/resources/: helpers.py
app/routers/: api_root.py
app/routers/v1/: api_data_download.py
app/routers/v2/: api_data_download.py
app/services/approval/: client.py  models.py
tests/: conftest.py  test_main.py  test_requirements.txt
tests/services/approval/: test_client.py  test_models.py
